# Artha-Terminal

./: .gitignore  LICENSE  MIGRATION.md  Makefile  README.md  conftest.py  home.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
backend/: README.md  __init__.py
backend/analytics/: __init__.py  one_year_return.py
backend/api/: __init__.py
backend/domain/: __init__.py
backend/features/: __init__.py  returns.py
backend/ingestion/: __init__.py  normalization.py  validation.py
backend/orchestration/: __init__.py
backend/platform/: __init__.py
backend/providers/: __init__.py
backend/tests/: __init__.py  conftest.py  test_skeleton.py
deploy/: ci.workflow.yml  snapshots.workflow.yml
docs/: PROJECT_CONTEXT.md
docs/architecture/: 01-vision.md  02-engineering-principles.md  03-system-architecture.md  04-canonical-domain-model.md  05-market-data-architecture.md  06-provider-abstraction-layer.md  07-database-design.md  08-analytics-framework.md  09-ai-framework.md  10-api-design.md  11-testing-strategy.md  12-deployment-strategy.md  13-security.md  14-compliance-and-licensing.md  15-development-roadmap.md  16-data-orchestration-and-freshness.md  README.md  (+4 more)
pages/: 1_india_market.py  2_us_market.py
scripts/: generate_snapshots.py  requirements.txt
shared/: __init__.py  ai_analysis.py  calculations.py  dashboard.py  data_loader.py  theme.py
tickers/: __init__.py  india_universe.json  india_universe.py  us_universe.json  us_universe.py
tools/: __init__.py  skeleton_status.py
(+46 files in other folders)
