# Nivesh Terminal — backend project configuration.
# Realizes ED-001 (Python 3.12), ED-007 (pytest), ED-009 (ruff), ED-010 (hypothesis). See
# docs/implementation/01-engineering-decisions.md.

[project]
name = "nivesh-terminal-backend"
version = "0.0.0"
description = "Nivesh Terminal — layered backend (see docs/architecture/)."
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "hypothesis>=6,<7",
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
    "ruff>=0.6,<0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Only the layered application ships; `tools/` is repo tooling, not part of the product.
packages = ["backend"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["backend", "tools"]
addopts = "-q --strict-markers"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["screenshots", "web"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.coverage.run]
source = ["backend"]
branch = true
